fix: sync PowerStore delete on all deletion paths, remove tombstone async pattern
All blob deletion paths now call PowerStore synchronously and only
remove from Files DB what PowerStore confirms deleted. This prevents
orphaned blobs that still count toward user quota.

Changes:
- deleteNodesFetcher: sync bulkDelete + transaction + folder pruning
- deleteVersionsFetcher: sync bulkDelete + transaction + partial errors
- BlobService: sync bulkDelete for auto-version-cleanup on upload
- PurgeService: bulkDelete for trash auto-purge, failed nodes retry next cycle
- Remove tombstone creation from all paths (no longer needed)
- Remove TombstoneRepository dependency from NodeDataFetcher

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>